--- a/ep 4.html
+++ b/ep 4.html
@@ -5,7 +5,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
-        <div class="row bg-secondary text-black">
+        <div class="row bg-white text-black">
             <div>
                 <!-- <img src="p5.jpg" class="rounded m-4" width="100" height="80"> -->
                 <table><thead><tr>
@@ -30,7 +30,7 @@
             </div>
         </div>
 <!----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-        <div class="row bg-secondary col-12"> 
+        <div class="row bg-white col-12"> 
             <div class="container-fluid col-12">
                 <div id="demo" class="carousel slide" data-bs-ride="'carousal">
                     <!-- Carousel -->
