--- a/exp 9 a.html
+++ b/exp 9 a.html
@@ -6,7 +6,7 @@ src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"
 type="text/javascript">
 </script>
 </head>
-<body ng-app="" style="color: blue;">
+<body ng-app="" style="color: black;">
     <div style="position: relative;left: 40%;">
         <h1>CHRISTMAS MEGAPLAY REGISTERATION</h1>
         <br>
